force-app/main/default/objects/invoices__x/fields/billDate__c.field-meta.xml
<CustomField>
    <fullName>billDate__c</fullName>
    <label>billDate</label>
    <length>128</length>
    <type>Text</type>
</CustomField>