force-app/main/default/objects/invoices__x/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>