force-app/main/default/objects/invoices__x/fields/ProjectRef__c.field-meta.xml
<CustomField>
    <fullName>ProjectRef__c</fullName>
    <label>ExternalID</label>
    <length>128</length>
    <referenceTargetField>Project__c.ProjectRef__c</referenceTargetField>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>invoices</relationshipLabel>
    <relationshipName>invoices</relationshipName>
    <type>IndirectLookup</type>
</CustomField>